--- a/style.css
+++ b/style.css
@@ -1,6 +1,37 @@
 body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    margin: 0;
+    padding: 0;
+    
     font-family: 'Roboto', sans-serif;
 }
 
 /* font-family: 'Sarina', cursive; */
 
+* {
+    box-sizing: border-box;
+}
+
+.header {
+    min-height: 100vh;
+
+    background-color: #222324;
+}
+
+.main {
+    min-height: 100vh;
+
+    border: 1px solid red;
+}
+
+.footer {
+    border: 1px solid red;
+}
+
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
+}
