fix: update html file

--- a/style.css
+++ b/style.css
@@ -268,6 +268,10 @@ html {
     width: 100px;
 }
 
+.title-block {
+    display: none;
+}
+
 @media (max-width: 1220px) {
     .section-subtitle {
         font-size: 40px;
