fix: update html file

--- a/style.css
+++ b/style.css
@@ -272,6 +272,49 @@ html {
     display: none;
 }
 
+.footer-link {
+    text-decoration: none;
+}
+
+.footer-link .footer-date {
+    transition: color 0.5s;
+}
+
+.footer-link .footer-date:hover {
+    color: #00FF0A;
+}
+
+.burger-btn {
+    margin: 20px;
+    width: 40px;
+}
+
+.burger-btn {
+    display: none;
+}
+
+.burger-btn > span,
+.burger-btn > span::before,
+.burger-btn > span::after {
+  display: block;
+  position: absolute;
+  width: 40px;
+  height: 3px;
+  background-color: #00FF0A;
+}
+.burger-btn > span::before {
+  content: '';
+  top: -8px;
+}
+.burger-btn > span::after {
+  content: '';
+  top: 8px;
+}
+
+.nav.open{
+    display: block;
+}
+
 @media (max-width: 1220px) {
     .section-subtitle {
         font-size: 40px;
@@ -291,8 +334,31 @@ html {
 }
 
 @media (max-width: 900px) {
+    .burger-btn {
+        display: block;
+    }
     .summary {
         flex-direction: column;
         padding: 60px 0;
     }
+    .nav {
+        display: none;
+        height: 100vh;
+        background-color: #222324;
+    }
+
+    .nav-list {
+        flex-direction: column;
+    }
+    
+    .nav-item {
+        margin: 10px 0;
+    }
+}
+
+@media (max-width: 650px) {
+    .footer .container {
+        flex-direction: column;
+    }
+    
 }
